TS-3658 ASAN triggers when using the escalate.so plugin

(cherry picked from commit 9e8800c5f648e4902c522087e88d9ea806a1de4f)

Conflicts:
	proxy/http/HttpSM.cc